--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,33 +6,41 @@
     android:orientation="vertical"
     tools:context="com.example.mathildapp.MainActivity">
 
-    <Button
-        android:id="@+id/button_toast"
+    <TextView
+        android:id="@+id/welcome"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/button_label_toast"
-        android:textColor="@android:color/white"
+        android:layout_weight="1"
+        android:text="@string/welcome"
         android:background="@color/colorPrimary"
-        android:onClick="showToast" />
+        android:textColor="@android:color/white"
+        android:textSize="@dimen/main_text_size"
+        android:gravity="center"
+        android:textStyle="bold" />
+
+    <Button
+        android:id="@+id/button_countapp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="4"
+        android:background="@color/myBackgroundColor"
+        android:onClick="launchCountApp"
+        android:text="@string/button_countapp"
+        android:textColor="@color/colorPrimary"
+        android:textSize="@dimen/main_text_size"
+        android:gravity="center"
+        android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/show_count"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:text="@string/count_initial_value"
-        android:textSize="@dimen/count_text_size"
-        android:textStyle="bold"
-        android:textColor="@color/colorPrimary"
-        android:background="@color/myBackgroundColor"
-        android:gravity="center"
-        android:layout_weight="2" />
-
-    <Button
-        android:id="@+id/button_count"
+        android:id="@+id/textView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/button_label_count"
-        android:textColor="@android:color/white"
+        android:layout_weight="1"
+        android:text="@string/bye"
         android:background="@color/colorPrimary"
-        android:onClick="countUp" />
+        android:textColor="@android:color/white"
+        android:textSize="@dimen/main_text_size"
+        android:gravity="center"
+        android:textStyle="bold" />
+
 </LinearLayout>
