--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="count_text_size">160sp</dimen>
+    <dimen name="main_text_size">20sp</dimen>
 </resources>
