--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,18 +18,43 @@
         android:gravity="center"
         android:textStyle="bold" />
 
-    <Button
-        android:id="@+id/button_countapp"
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="4"
-        android:background="@color/myBackgroundColor"
-        android:onClick="launchCountApp"
-        android:text="@string/button_countapp"
-        android:textColor="@color/colorPrimary"
-        android:textSize="@dimen/main_text_size"
-        android:gravity="center"
-        android:textStyle="bold" />
+        android:layout_weight="5"
+        android:gravity="center">
+
+        <Button
+            android:id="@+id/button_countapp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@color/myBackgroundColor"
+            android:onClick="launchCountApp"
+            android:text="@string/button_countapp"
+            android:textColor="@color/colorPrimary"
+            android:textSize="@dimen/main_text_size"
+            android:gravity="center"
+            android:textStyle="bold"
+            tools:ignore="ButtonStyle,NestedWeights" />
+
+        <Button
+            android:id="@+id/button_todolist"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@color/myBackgroundColor"
+            android:onClick="launchTodoApp"
+            android:text="@string/todo_list"
+            android:textColor="@color/colorPrimary"
+            android:textSize="@dimen/main_text_size"
+            android:gravity="center"
+            android:textStyle="bold"
+            tools:ignore="ButtonStyle" />
+
+    </LinearLayout>
+
 
     <TextView
         android:id="@+id/textView2"
