Added lifecycle states + log message Added "return to main screen" button on countApp

--- a/app/src/main/res/layout/activity_countapp.xml
+++ b/app/src/main/res/layout/activity_countapp.xml
@@ -56,6 +56,17 @@
             android:textColor="@android:color/white"
             tools:ignore="ButtonStyle" />
 
+        <Button
+            android:id="@+id/button_return"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@color/colorPrimary"
+            android:onClick="Return"
+            android:text="@string/button_return"
+            android:textColor="@android:color/white"
+            tools:ignore="ButtonStyle" />
+
 
     </LinearLayout>
 
