--- a/app/src/main/res/layout/activity_todoapp.xml
+++ b/app/src/main/res/layout/activity_todoapp.xml
@@ -27,6 +27,8 @@
         android:layout_toStartOf="@+id/btnAddItem"
         android:layout_alignParentBottom="true" />
 
+    <!-- TODO! Hey I am here down in XML -->
+
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
